[gd_scene load_steps=16 format=2]

[ext_resource path="res://main_theme.tres" type="Theme" id=1]
[ext_resource path="res://CloseWindow.gd" type="Script" id=2]
[ext_resource path="res://TopPanel.gd" type="Script" id=3]
[ext_resource path="res://MinimizeWindow.gd" type="Script" id=4]
[ext_resource path="res://ExeCheck.gd" type="Script" id=5]
[ext_resource path="res://FileSelectOptions.gd" type="Script" id=6]
[ext_resource path="res://PresetMenu.gd" type="Script" id=7]
[ext_resource path="res://FileDialog.gd" type="Script" id=8]
[ext_resource path="res://LAUNCH.gd" type="Script" id=9]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://icons/ic_fluent_error_circle_48_filled.stex"

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://icons/ic_fluent_open_folder_48_filled.stex"

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://icons/steam.stex"

[sub_resource type="StreamTexture" id=4]
flags = 4
load_path = "res://icons/gog.stex"

[sub_resource type="StreamTexture" id=5]
flags = 4
load_path = "res://icons/itch.stex"

[sub_resource type="StreamTexture" id=6]
flags = 4
load_path = "res://icons/epic.stex"

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 600.0
margin_bottom = 1280.0
rect_min_size = Vector2( 600, 1280 )
mouse_filter = 1
color = Color( 0, 0, 0, 1 )

[node name="TopPanel" type="Button" parent="."]
margin_right = 600.0
margin_bottom = 50.0
rect_min_size = Vector2( 600, 0 )
text = "DV Loader"
script = ExtResource( 3 )

[node name="ColorRect2" type="ColorRect" parent="TopPanel"]
margin_right = 600.0
margin_bottom = 50.0
rect_min_size = Vector2( 600, 0 )
mouse_filter = 1
color = Color( 0.27451, 0.27451, 0.27451, 1 )

[node name="Label" type="Label" parent="TopPanel"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 600, 50 )
text = "DV Loader"
align = 1
valign = 1

[node name="TopContainer" type="VBoxContainer" parent="."]
margin_top = 50.0
margin_right = 600.0
margin_bottom = 1280.0
rect_min_size = Vector2( 600, 1230 )

[node name="BottomContainer" type="VBoxContainer" parent="."]
margin_top = 50.0
margin_right = 600.0
margin_bottom = 1280.0
rect_min_size = Vector2( 600, 1230 )
alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="BottomContainer"]
margin_top = 1030.0
margin_right = 600.0
margin_bottom = 1130.0
rect_min_size = Vector2( 600, 100 )

[node name="Panel" type="Panel" parent="BottomContainer/HBoxContainer2"]
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 600, 50 )

[node name="VBoxContainer" type="VBoxContainer" parent="BottomContainer/HBoxContainer2/Panel"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 600, 100 )

[node name="HBoxContainer2" type="HBoxContainer" parent="BottomContainer/HBoxContainer2/Panel/VBoxContainer"]
margin_right = 600.0
margin_bottom = 50.0
rect_min_size = Vector2( 600, 50 )

[node name="EnableMods" type="CheckBox" parent="BottomContainer/HBoxContainer2/Panel/VBoxContainer/HBoxContainer2"]
margin_right = 206.0
margin_bottom = 50.0
text = "--enable-mods"

[node name="Label" type="Label" parent="BottomContainer/HBoxContainer2/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 210.0
margin_top = 5.0
margin_right = 259.0
margin_bottom = 45.0
rect_min_size = Vector2( 49, 0 )
text = "    "

[node name="DebugConsole" type="CheckBox" parent="BottomContainer/HBoxContainer2/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 263.0
margin_right = 490.0
margin_bottom = 50.0
text = "--debug-console"

[node name="HBoxContainer3" type="HBoxContainer" parent="BottomContainer/HBoxContainer2/Panel/VBoxContainer"]
margin_top = 54.0
margin_right = 600.0
margin_bottom = 104.0

[node name="HBoxContainer" type="HBoxContainer" parent="BottomContainer/HBoxContainer2/Panel/VBoxContainer/HBoxContainer3"]
margin_right = 551.0
margin_bottom = 50.0
rect_min_size = Vector2( 550, 50 )

[node name="AccumulateInput" type="CheckBox" parent="BottomContainer/HBoxContainer2/Panel/VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_right = 259.0
margin_bottom = 50.0
text = "--accumulate-input"

[node name="Screensaver" type="CheckBox" parent="BottomContainer/HBoxContainer2/Panel/VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_left = 263.0
margin_right = 457.0
margin_bottom = 50.0
text = "--screensaver"

[node name="SpinBox" type="SpinBox" parent="BottomContainer/HBoxContainer2/Panel/VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_left = 461.0
margin_right = 551.0
margin_bottom = 50.0
rect_min_size = Vector2( 90, 50 )
min_value = 1.0
max_value = 10.0
value = 3.0
align = 1
prefix = "wait"
suffix = "s"

[node name="HBoxContainer2" type="HBoxContainer" parent="BottomContainer/HBoxContainer2/Panel"]
margin_left = 555.0
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 45, 100 )
alignment = 2

[node name="Button" type="Button" parent="BottomContainer/HBoxContainer2/Panel/HBoxContainer2"]
margin_left = 11.0
margin_right = 45.0
margin_bottom = 100.0
text = "V"

[node name="HBoxContainer" type="HBoxContainer" parent="BottomContainer"]
margin_top = 1134.0
margin_right = 600.0
margin_bottom = 1180.0

[node name="LineEdit" type="LineEdit" parent="BottomContainer/HBoxContainer"]
margin_right = 492.0
margin_bottom = 46.0
rect_min_size = Vector2( 492, 40 )
placeholder_text = "Enter file path (e.g. C:\\\\path\\to\\file.exe ; /path/to/file.x86_64)"

[node name="ExeCheck" type="Button" parent="BottomContainer/HBoxContainer"]
margin_left = 496.0
margin_right = 546.0
margin_bottom = 46.0
rect_min_size = Vector2( 50, 40 )
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="BottomContainer/HBoxContainer/ExeCheck"]
modulate = Color( 8, 0, 0, 1 )
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 46 )
mouse_filter = 2
texture = SubResource( 1 )
expand = true
stretch_mode = 4

[node name="OpenFileManager" type="Button" parent="BottomContainer/HBoxContainer"]
margin_left = 550.0
margin_right = 600.0
margin_bottom = 46.0
rect_min_size = Vector2( 50, 40 )

[node name="TextureRect" type="TextureRect" parent="BottomContainer/HBoxContainer/OpenFileManager"]
modulate = Color( 8, 8, 8, 1 )
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 46 )
texture = SubResource( 2 )
expand = true
stretch_mode = 4

[node name="LAUNCH" type="Button" parent="BottomContainer"]
margin_top = 1184.0
margin_right = 600.0
margin_bottom = 1230.0
text = "Launch Î”V: Rings of Saturn"
script = ExtResource( 9 )

[node name="Minimize" type="Button" parent="."]
margin_left = 500.0
margin_right = 550.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
text = "_"
script = ExtResource( 4 )

[node name="Close" type="Button" parent="."]
margin_left = 550.0
margin_right = 600.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
text = "X"
script = ExtResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_top = 50.0
margin_right = 600.0
margin_bottom = 1280.0
rect_min_size = Vector2( 600, 1230 )
mouse_filter = 2
alignment = 2

[node name="pos" type="Label" parent="VBoxContainer2"]
margin_top = 1190.0
margin_right = 600.0
margin_bottom = 1230.0
autowrap = true

[node name="FileSelectOptions" type="WindowDialog" parent="."]
margin_top = 400.0
margin_right = 600.0
margin_bottom = 700.0
rect_min_size = Vector2( 600, 300 )
popup_exclusive = true
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="FileSelectOptions"]
margin_right = 600.0
margin_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="FileSelectOptions/VBoxContainer"]
margin_right = 600.0
margin_bottom = 240.0
rect_min_size = Vector2( 600, 240 )
alignment = 1

[node name="Label" type="Label" parent="FileSelectOptions/VBoxContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 600.0
margin_bottom = 183.0
text = "Select executable or PCK file from either a list of presets based on game launcher, or from a file picker"
autowrap = true

[node name="VBoxContainer2" type="VBoxContainer" parent="FileSelectOptions/VBoxContainer"]
margin_top = 244.0
margin_right = 600.0
margin_bottom = 304.0
rect_min_size = Vector2( 600, 60 )
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="FileSelectOptions/VBoxContainer/VBoxContainer2"]
margin_top = 7.0
margin_right = 600.0
margin_bottom = 53.0
alignment = 1

[node name="Presets" type="Button" parent="FileSelectOptions/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 61.0
margin_right = 191.0
margin_bottom = 46.0
text = "Presets"

[node name="Label" type="Label" parent="FileSelectOptions/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 195.0
margin_top = 3.0
margin_right = 360.0
margin_bottom = 43.0
text = "               "

[node name="FilePicker" type="Button" parent="FileSelectOptions/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 364.0
margin_right = 539.0
margin_bottom = 46.0
text = "File Picker"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = -100.0
margin_top = 300.0
margin_right = 600.0
margin_bottom = 800.0
rect_min_size = Vector2( 700, 500 )
popup_exclusive = true
window_title = "Open executable or PCK"
resizable = true
dialog_hide_on_ok = true
mode = 0
access = 2
filters = PoolStringArray( "*.exe", "*.x86_64", "*.pck" )
show_hidden_files = true
script = ExtResource( 8 )

[node name="PresetMenu" type="Popup" parent="."]
margin_top = 400.0
margin_right = 600.0
margin_bottom = 700.0
rect_min_size = Vector2( 600, 300 )
popup_exclusive = true
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="PresetMenu"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 600, 450 )
mouse_filter = 2

[node name="VendorBox" type="VBoxContainer" parent="PresetMenu/Panel"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 600, 400 )
mouse_filter = 2
alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="PresetMenu/Panel/VendorBox"]
margin_right = 600.0
margin_bottom = 50.0
rect_min_size = Vector2( 600, 50 )
mouse_filter = 2
alignment = 2

[node name="Button" type="Button" parent="PresetMenu/Panel/VendorBox/HBoxContainer4"]
margin_left = 550.0
margin_right = 600.0
margin_bottom = 50.0
text = "X"

[node name="HBoxContainer" type="HBoxContainer" parent="PresetMenu/Panel/VendorBox"]
margin_top = 54.0
margin_right = 600.0
margin_bottom = 174.0
mouse_filter = 2
alignment = 1

[node name="Steam" type="Button" parent="PresetMenu/Panel/VendorBox/HBoxContainer"]
margin_left = 132.0
margin_right = 252.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
disabled = true
icon = SubResource( 3 )
expand_icon = true

[node name="Label" type="Label" parent="PresetMenu/Panel/VendorBox/HBoxContainer"]
margin_left = 256.0
margin_top = 40.0
margin_right = 344.0
margin_bottom = 80.0
text = "        "

[node name="Gog" type="Button" parent="PresetMenu/Panel/VendorBox/HBoxContainer"]
margin_left = 348.0
margin_right = 468.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
disabled = true
icon = SubResource( 4 )
expand_icon = true

[node name="HBoxContainer3" type="HBoxContainer" parent="PresetMenu/Panel/VendorBox"]
margin_top = 178.0
margin_right = 600.0
margin_bottom = 238.0
rect_min_size = Vector2( 0, 60 )
mouse_filter = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PresetMenu/Panel/VendorBox"]
margin_top = 242.0
margin_right = 600.0
margin_bottom = 362.0
mouse_filter = 2
alignment = 1

[node name="Itch" type="Button" parent="PresetMenu/Panel/VendorBox/HBoxContainer2"]
margin_left = 132.0
margin_right = 252.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
disabled = true
icon = SubResource( 5 )
expand_icon = true

[node name="Label" type="Label" parent="PresetMenu/Panel/VendorBox/HBoxContainer2"]
margin_left = 256.0
margin_top = 40.0
margin_right = 344.0
margin_bottom = 80.0
text = "        "

[node name="Epic" type="Button" parent="PresetMenu/Panel/VendorBox/HBoxContainer2"]
margin_left = 348.0
margin_right = 468.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
disabled = true
icon = SubResource( 6 )
expand_icon = true

[node name="HBoxContainer5" type="HBoxContainer" parent="PresetMenu/Panel/VendorBox"]
margin_top = 366.0
margin_right = 600.0
margin_bottom = 426.0
rect_min_size = Vector2( 0, 60 )
mouse_filter = 2

[connection signal="button_down" from="TopPanel" to="TopPanel" method="_button_down"]
[connection signal="button_up" from="TopPanel" to="TopPanel" method="_button_up"]
[connection signal="text_changed" from="BottomContainer/HBoxContainer/LineEdit" to="BottomContainer/HBoxContainer/ExeCheck" method="_text_changed"]
[connection signal="pressed" from="BottomContainer/HBoxContainer/OpenFileManager" to="FileSelectOptions" method="_pressed"]
[connection signal="pressed" from="Minimize" to="Minimize" method="_on_Minimize_pressed"]
[connection signal="pressed" from="Close" to="Close" method="_on_Button_pressed"]
[connection signal="pressed" from="FileSelectOptions/VBoxContainer/VBoxContainer2/HBoxContainer/Presets" to="FileSelectOptions" method="_on_Presets_pressed"]
[connection signal="pressed" from="FileSelectOptions/VBoxContainer/VBoxContainer2/HBoxContainer/FilePicker" to="FileSelectOptions" method="_on_FilePicker_pressed"]
[connection signal="file_selected" from="FileDialog" to="FileDialog" method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="PresetMenu/Panel/VendorBox/HBoxContainer4/Button" to="PresetMenu" method="_on_Cancel_pressed"]
